# cgu-cmrc-clinic-system

./: .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  install.ps1  install.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607170001_phase1_initial.py  202607170002_auth_rbac.py  202607170003_registration.py  202607170004_clinic_phase.py  202607170005_medications_prescriptions.py  202607170006_pharmacy_dispensing.py  202607170007_inventory_batches.py  202607170008_system_administration.py  202607180009_data_mode_isolation.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: health.py
backend/app/core/: config.py  data_mode.py  security.py
backend/app/db/: base.py  session.py
backend/app/modules/audit_logs/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  seed_admin.py  service.py
backend/app/modules/clinic/: router.py  schemas.py
backend/app/modules/clinic_sessions/: __init__.py  models.py  router.py  schemas.py
backend/app/modules/consents/: __init__.py  models.py  router.py  schemas.py
backend/app/modules/consultations/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: router.py  schemas.py
backend/tests/: test_auth.py  test_clinic_phase.py  test_data_mode.py  test_dispensing.py  test_health.py  test_inventory.py  test_prescriptions.py  test_registration.py  test_system_administration.py
deploy/: README.md  (+19 more)
(+111 files in other folders)
