[project]
name = "cgu-cmrc-clinic-backend"
version = "0.1.0"
description = "FastAPI backend for CGU CMRC clinic health record system"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13.2",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "pwdlib[argon2]>=0.2.1",
  "pyjwt>=2.10.1",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.3"
]

[build-system]
requires = ["setuptools>=74.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
